--- a/Exercicio01.ipynb
+++ b/Exercicio01.ipynb
@@ -1065,6 +1065,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7) João Papo-de-Pescador, homem de bem, comprou um microcomputador para controlar o rendimento diário de seu trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você faça um programa que leia a variável peso (peso de peixes) e verifique se há excesso. Se houver, gravar na variável excesso e na variável multa o valor da multa que João deverá pagar. Caso contrário mostrar tais variáveis com o conteúdo ZERO."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite o peso dos peixes: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "peso_peixes = int(input(\"Digite o peso dos peixes: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Há o excedente de 0 kg e a multa é de R$ 0 reais.\n"
+     ]
+    }
+   ],
+   "source": [
+    "excesso = 0\n",
+    "multa = 0\n",
+    "\n",
+    "if peso_peixes > 50:\n",
+    "    excesso = peso_peixes - 50\n",
+    "    multa = excesso * 4\n",
+    "    print ('Há o excedente de %s kg e a multa é de R$ %s reais.' %(excesso, multa))\n",
+    "else: \n",
+    "    print ('Há o excedente de %s kg e a multa é de R$ %s reais.' %(excesso, multa))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite o peso dos peixes: 60\n",
+      "Há o excedente de 10 kg e a multa é de R$ 40 reais.\n"
+     ]
+    }
+   ],
+   "source": [
+    "peso_peixes = int(input(\"Digite o peso dos peixes: \"))\n",
+    "\n",
+    "excesso = 0\n",
+    "multa = 0\n",
+    "\n",
+    "if peso_peixes > 50:\n",
+    "    excesso = peso_peixes - 50\n",
+    "    multa = excesso * 4\n",
+    "    print ('Há o excedente de %s kg e a multa é de R$ %s reais.' %(excesso, multa))\n",
+    "else: \n",
+    "    print ('Há o excedente de %s kg e a multa é de R$ %s reais.' %(excesso, multa))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8) Faça um Programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê:\n",
+    "- salário bruto.\n",
+    "- quanto pagou ao INSS.\n",
+    "- quanto pagou ao sindicato.\n",
+    "- o salário líquido.\n",
+    "- calcule os descontos e o salário líquido, conforme a tabela abaixo:\n",
+    "+ Salário Bruto : R$\n",
+    "- IR (11%8 : R$\n",
+    "- INSS (8%8 : R$\n",
+    "- Sindicato ( 5%8 : R$\n",
+    "= Salário Liquido : R$\n",
+    "Obs.: Salário Bruto - Descontos = Salário Líquido."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
