--- a/Exercicio01.ipynb
+++ b/Exercicio01.ipynb
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1157,6 +1157,195 @@
     "- Sindicato ( 5%8 : R$\n",
     "= Salário Liquido : R$\n",
     "Obs.: Salário Bruto - Descontos = Salário Líquido."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quanto você ganha por hora?: 30\n",
+      "Quantas horas você trabalha no mês?: 10\n",
+      "O seu salário bruto esse mês é de R$ 300.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ganho_hora = float(input('Quanto você ganha por hora?: '))\n",
+    "horas_trabalhadas = float(input('Quantas horas você trabalha no mês?: '))\n",
+    "\n",
+    "#salário bruto\n",
+    "salario = ganho_hora * horas_trabalhadas\n",
+    "print('O seu salário bruto esse mês é de R$ %.1f.' %salario)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você pagou R$ 24.0 para o INSS.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#inss\n",
+    "inss = salario * 0.08\n",
+    "print('Você pagou R$ %.1f para o INSS.' %inss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você pagou R$ 15.0 para o Sindicato.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sindicato\n",
+    "sindicato = salario * 0.05\n",
+    "print('Você pagou R$ %.1f para o Sindicato.' %sindicato)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O seu salário líquido esse mês é de R$ 228.0 reais.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#liquido\n",
+    "liquido = salario - (salario * 0.11) - inss - sindicato\n",
+    "print('O seu salário líquido esse mês é de R$ %.1f reais.' %liquido)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9) Faça um programa que leia 2 strings e informe o conteúdo delas seguido do seu comprimento. Informe também se as duas strings possuem o mesmo comprimento e são iguais ou diferentes no conteúdo. Exemplo: String 1: Brasil Hexa 2018 String 2: Brasil! Hexa 2018! Tamanho de \"Brasil Hexa 2018\": 16 caracteres Tamanho de \"Brasil! Hexa 2018!\": 18 caracteres As duas strings são de tamanhos diferentes. As duas strings possuem conteúdo diferente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insira algo: hello\n",
+      "Insira outro algo: there and back again\n",
+      "O conteúdo da primeira string é: \"hello\" e o seu tamanho é de 5 caracteres.\n",
+      "O conteúdo da segunda string é: \"there and back again\" e o seu tamanho é de 20 caracteres.\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_1 = input('Insira algo: ')\n",
+    "string_2 = input('Insira outro algo: ')\n",
+    "\n",
+    "tam_1 = len(string_1)\n",
+    "tam_2 = len(string_2)\n",
+    "\n",
+    "print('O conteúdo da primeira string é: \"%s\" e o seu tamanho é de %s caracteres.' %(string_1, tam_1))\n",
+    "print('O conteúdo da segunda string é: \"%s\" e o seu tamanho é de %s caracteres.' %(string_2, tam_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Possuem conteúdos diferentes!\n",
+      "Tamanhos diferentes!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if string_1 == string_2:\n",
+    "    print('Possuem o mesmo conteúdo!')\n",
+    "else:\n",
+    "    print('Possuem conteúdos diferentes!')\n",
+    "    \n",
+    "if tam_1 == tam_2:\n",
+    "    print('Mesmo tamanho!')\n",
+    "else:\n",
+    "    print('Tamanhos diferentes!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10) Faça um programa que permita ao usuário digitar o seu nome e em seguida mostre o nome do usuário de trás para frente utilizando somente letras maiúsculas. Dica: lembre−se que ao informar o nome o usuário pode digitar letras maiúsculas ou minúsculas. Observação: não use loops.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, digite o seu nome: Leila Anez\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome = input('Olá, digite o seu nome: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZENA ALIEL\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((nome[::-1]).upper())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11) Faça um programa que solicite a data de nascimento (dd/mm/aaaa) do usuário e imprima a data com o nome do mês por extenso. Data de Nascimento: 29/10/1973 Você nasceu em  29 de Outubro de 1973. Obs.: Não use desvio condicional nem loops.\n"
    ]
   },
   {
